--- a/package.json
+++ b/package.json
@@ -13,9 +13,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@ethersproject/address": "5.5.0",
+    "@ethersproject/constants": "5.5.0",
+    "@ethersproject/contracts": "5.5.0",
+    "@ethersproject/providers": "5.5.1",
+    "@metamask/post-message-stream": "4.0.0",
+    "@metamask/providers": "8.1.1",
+    "@safe-global/safe-apps-provider": "^0.18.0",
+    "@safe-global/safe-apps-sdk": "^8.1.0",
+    "@web3-react/abstract-connector": "^6.0.7",
+    "eslint": "8.4.1",
     "gatsby": "^5.13.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^4.1.2",
+    "ua-parser-js": "1.0.33"
   },
   "license": "MIT"
 }
